Added help link removed author link

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -49,7 +49,7 @@
 <h3>Get Grim</h3>
 <p>Click here to download Grim. It can be installed by copying the unzipped folder to your QGIS plugins directory (on Windows, this will be similar to "C:\Users\Thomas.qgis2\python\plugins")</p>
 <h3>Help</h3>
-<p>Grim includes a comprehensive help system. For help during use, click the "?" button at the top right of the screen and then click on a UI element for details about what it does. You can also access the help files by clicking the "Help" button, or download them seperately here. </p>
+<p>Grim includes a comprehensive help system. For help during use, click the "?" button at the top right of the screen and then click on a UI element for details about what it does. You can also access the help files by clicking the "Help" button, or download them seperately <a href="https://thomasmns.github.io/CoastalResearch/images/help.pdf">here</a>. </p>
 <p><img alt="Grim data" src="https://thomasmns.github.io/CoastalResearch/images/graphs.png"></p>
 <h2>SfM_georef</h2>
 <p>SfM_georef is a tool developed by Dr Michael James for scaling and geo-referencing structure-from-motion (SfM) point clouds to real-world coordinates, using observations made directly in the SfM image set. It also includes functions for processing the output of ground control point and point precision analyses, which are carried out using Monte Carlo approaches with PhotoScan. For more information, view <a href="http://www.lancaster.ac.uk/staff/jamesm/software/sfm_georef.htm">this</a> page. </p>
