--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <article class="BlogPost">
 	<header class="BlogHeader">
 		<h2 class="BlogTitle">Introducing Grim</h2>
-<div class="BlogMeta">By <a class="BlogAuthor" href="https://thomasmns.github.io/CoastalResearch/author/thomas-burke.html">Thomas Burke</a> on Tue 21 March 2017</div>	</header>
+<div class="BlogMeta">By Thomas Burke on Tue 21 March 2017</div>	</header>
 	<div class="BlogContent">
 	    <p>Grim, a Python QGIS plugin for analysing the impact of coastal groynes on beach morphology, is now available.</p>  <a class="BlogReadMore" href="https://thomasmns.github.io/CoastalResearch/introducing-grim.html">Read more...</a>
 	</div>	
@@ -53,7 +53,7 @@
 <article class="BlogPost">
 	<header class="BlogHeader">
 		<h2 class="BlogTitle">Collaboration Across Continents</h2>
-<div class="BlogMeta">By <a class="BlogAuthor" href="https://thomasmns.github.io/CoastalResearch/author/thomas-burke.html">Thomas Burke</a> on Thu 16 March 2017</div>	</header>
+<div class="BlogMeta">By Thomas Burke on Thu 16 March 2017</div>	</header>
 	<div class="BlogContent">
 	    <p>The Lancaster Environment Centre has this month been hosting colleagues from Copperbelt University, Zambia, for productive discussions on a range of topics, including mini hydropower generation. Lancaster also played host to a student from the university for several weeks, during which time he took part in several projects.</p>  <a class="BlogReadMore" href="https://thomasmns.github.io/CoastalResearch/collaboration-across-continents.html">Read more...</a>
 	</div>	
@@ -62,7 +62,7 @@
 <article class="BlogPost">
 	<header class="BlogHeader">
 		<h2 class="BlogTitle">Welcome!</h2>
-<div class="BlogMeta">By <a class="BlogAuthor" href="https://thomasmns.github.io/CoastalResearch/author/thomas-burke.html">Thomas Burke</a> on Tue 14 March 2017</div>	</header>
+<div class="BlogMeta">By Thomas Burke on Tue 14 March 2017</div>	</header>
 	<div class="BlogContent">
 	    <p>Hello, and welcome. This website is intented to provide information on the research being carried out at Lancaster University, relating to the interactions between water, sediment and artificial structures in coastal and riverine environments.</p>  <a class="BlogReadMore" href="https://thomasmns.github.io/CoastalResearch/welcome.html">Read more...</a>
 	</div>	
