--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Coastal Research at Lancaster University</title>
+        <title>Coastal Research at Lancaster</title>
         <link rel="stylesheet" href="https://thomasmns.github.io/CoastalResearch\theme\style.css">
+        <link rel="stylesheet" type="text/css" href="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick\slick.css"/>
+		<link rel="stylesheet" type="text/css" href="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick\slick-theme.css"/>
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 		<link rel="icon" href="https://thomasmns.github.io/CoastalResearch\theme\favicon.png">
     </head>
@@ -30,9 +32,25 @@
 		</div>
 		<!-- Nav end -->
         <!-- Hero start -->
-<div class="HeroOuter">
-	<div class="Hero Container">
-		<div class="HeroInner">We are a group of academics researching the interactions between water, sediment and artificial structures in coastal and riverine environments. We aim to further knowledge in areas such as flooding, erosion and renewable energy generation, and are especially known for our successful collaborations with partners across academia, business and government.</div>
+<div class="SliderOuter">
+	<div class="Slider Container">
+		<div class="SliderInner">
+			<div>
+				<img src="https://thomasmns.github.io/CoastalResearch\theme\slider_1.jpg" alt="Iron Men at Crosby">
+					<div class="slider_caption"><h2 class="SliderHeader">Welcome</h2>
+					<p class="SliderContent">We are a group of academics researching the interactions between water, sediment and artificial structures in coastal and riverine environments. We aim to further knowledge in areas such as flooding, erosion and renewable energy generation, and are especially known for our successful collaborations with partners across academia, business and government.</p></div>
+			</div>
+			<div>
+				<img src="https://thomasmns.github.io/CoastalResearch\theme\slider_2.jpg" alt="A rock groyne">
+				<div class="slider_caption"><h2 class="SliderHeader">Wide-ranging expertise</h2>
+					<p class="SliderContent">Our experience includes GIS, remote sensing, numerical modelling, laboratory modelling and long and short term field campaigns across a variety of sites in the U.K and abroad. </p></div>
+			</div>
+			<div>
+				<img src="https://thomasmns.github.io/CoastalResearch\theme\slider_3.jpg" alt="A pebble beach">
+				<div class="slider_caption"><h2 class="SliderHeader">Actionable research</h2>
+				<p class="SliderContent">Our research is regularly practical and applied in nature, and tackles the important issues facing the world today including coastal erosion and renewable energy generation, furthering knowledge and helping to inform decision makers.</p></div>
+			</div>
+		</div>
 	</div>
 </div>
         <!-- Hero end --> 
@@ -89,21 +107,26 @@
 		    </div>
         </div>
 		<!-- Footer end -->
+        <!-- Javascript start -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick/slick.min.js"></script>
+        <script type="text/javascript" src="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick\slick_init.js"></script>
         <script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
+        var js, fjs = d.getElementsByTagName(s)[0],
+            t = window.twttr || {};
+        if (d.getElementById(id)) return t;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js, fjs);
 
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
+        t._e = [];
+        t.ready = function(f) {
+            t._e.push(f);
+        };
 
-  return t;
-}(document, "script", "twitter-wjs"));</script>
+        return t;
+        }(document, "script", "twitter-wjs"));</script>
+        <!-- Javascript end -->
     </body>
 </html>
