--- a/tags.html
+++ b/tags.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Coastal Research at Lancaster University - Tags</title>
+        <title>Coastal Research at Lancaster - Tags</title>
         <link rel="stylesheet" href="https://thomasmns.github.io/CoastalResearch\theme\style.css">
+        <link rel="stylesheet" type="text/css" href="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick\slick.css"/>
+		<link rel="stylesheet" type="text/css" href="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick\slick-theme.css"/>
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 		<link rel="icon" href="https://thomasmns.github.io/CoastalResearch\theme\favicon.png">
     </head>
@@ -36,7 +38,7 @@
 			<div class="Main Container Clearfix">
 				<div class="ContentWrapper">
 					<div class="Content">
-    <h1>Tags for Coastal Research at Lancaster University</h1>        <li><a href="https://thomasmns.github.io/CoastalResearch/tag/news.html">news</a> (3)</li>
+    <h1>Tags for Coastal Research at Lancaster</h1>        <li><a href="https://thomasmns.github.io/CoastalResearch/tag/news.html">news</a> (3)</li>
 					</div>
 				</div>
                 <div class="Sidebar">
@@ -58,21 +60,26 @@
 		    </div>
         </div>
 		<!-- Footer end -->
+        <!-- Javascript start -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick/slick.min.js"></script>
+        <script type="text/javascript" src="https://thomasmns.github.io/CoastalResearch\theme\javascript\slick\slick_init.js"></script>
         <script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
+        var js, fjs = d.getElementsByTagName(s)[0],
+            t = window.twttr || {};
+        if (d.getElementById(id)) return t;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js, fjs);
 
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
+        t._e = [];
+        t.ready = function(f) {
+            t._e.push(f);
+        };
 
-  return t;
-}(document, "script", "twitter-wjs"));</script>
+        return t;
+        }(document, "script", "twitter-wjs"));</script>
+        <!-- Javascript end -->
     </body>
 </html>
