Tweaks to Grim description

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		<h2 class="BlogTitle">Introducing Grim</h2>
 <div class="BlogMeta">By Thomas Burke on Tue 21 March 2017</div>	</header>
 	<div class="BlogContent">
-	    <p>Grim, a Python QGIS plugin for analysing the impact of coastal groynes on beach morphology, is now available.</p>  <a class="BlogReadMore" href="https://thomasmns.github.io/CoastalResearch/introducing-grim.html">Read more...</a>
+	    <p>Grim, a simple Python QGIS plugin for analysing the impact of coastal groynes on beach morphology, is now available.</p>  <a class="BlogReadMore" href="https://thomasmns.github.io/CoastalResearch/introducing-grim.html">Read more...</a>
 	</div>	
 </article>
 <div class="PostSeperator"></div>
