--- a/introducing-grim.html
+++ b/introducing-grim.html
@@ -39,8 +39,7 @@
 				<div class="ContentWrapper">
 					<div class="Content">
 <h2 class="PageTitle">Introducing Grim</h2>
-<div class="ArticlePageMeta">Posted by Thomas Burke on Tue 21 March 2017</div><p>We are pleased to announce the release of Grim, a freely available Python plugin for the open source GIS program QGIS, designed for analysing the impacts of coastal groynes on beach morphology. Based on work carried out during an MSci research project, the tool allows for the automated calculation of groyne cell properties such as area and the volume of average elevation of material within it, along with the rapid creation of beach cross sections. </p>
-<p>The tool is also incredibly easy to use, featuring simple step by step instructions and a comprehensive help system, and can work with a variety of data types. </p>
+<div class="ArticlePageMeta">Posted by Thomas Burke on Tue 21 March 2017</div><p>Grim, a simple Python plugin for the open source GIS program QGIS, is now available as a beta. The tool is designed for quickly analysing the impacts of coastal groynes on beach morphology by automatically calculating groyne celll properties, such as area and the volume of material within them. The tool is very easy to use, and can work with a variety of data types.</p>
 <p>More information can be found on our <a href="https://thomasmns.github.io/CoastalResearch/pages/tools.html">Tools page.</a>. </p>
 <p><img alt="Grim screenshots" src="https://thomasmns.github.io/CoastalResearch/images/grim_2_screenshots.png"></p>
 					</div>
